# python-agents-examples

./: CLAUDE.md  README.md  voice_agent.py
.claude/commands/: review-example.md  scaffold-example.md
daily-plivo/: README.md  bot.py
gemini-deepgram-cartesia-native/: .gitignore  README.md  agent.py  env.example  pyproject.toml  server.py
gemini-deepgram-cartesia-native/tests/: __init__.py  test_agent.py  test_audio.py  test_e2e_live.py  test_e2e_real_apis.py  test_live_call.py  test_server.py
gemini-deepgram-elevenlabs-native/: .env.example  Dockerfile  README.md  agent.py  pyproject.toml  server.py  system_prompt.md
gemini-deepgram-elevenlabs-native/tests/: __init__.py  test_agent.py  test_audio.py  test_e2e_live.py  test_e2e_real_apis.py  test_live_call.py  test_server.py
gemini-deepgram-groktts-pipecat/: .env.example  README.md
gemini-deepgram-groktts-pipecat/scripts/: generate_test_data.py
gemini-deepgram-groktts-pipecat/services/: xai_tts.py
gemini-deepgram-groktts-pipecat/static/: dashboard.html
gemini-live-native/: Dockerfile  README.md  agent.py  env.example  pyproject.toml  server.py  utils.py
gemini-live-native-silero/: README.md  env.example  pyproject.toml  system_prompt.md
gemini-live-native-silero/tests/: __init__.py
gemini-live-native-webrtcvad/: .env.example  Dockerfile  README.md  agent.py  pyproject.toml  system_prompt.md
gemini-live-native-webrtcvad/tests/: test_integration.py
gemini-live-native/inbound/: agent.py  server.py  system_prompt.md
gemini-live-native/outbound/: agent.py  server.py  system_prompt.md
gemini-live-native/tests/: helpers.py  test_e2e_live.py  test_integration.py  test_live_call.py  test_multiturn_voice.py  test_outbound_call.py
gemini-live-pipecat/: .pre-commit-config.yaml  README.md  agent.py  env.example  pyproject.toml  server.py  test_greeting_live.py
gemini-live-pipecat/inbound/: system_prompt.md
gemini-live-pipecat/outbound/: system_prompt.md
gemini-live-pipecat/tests/: conftest.py  test_e2e_live.py  test_greeting_live.py  test_integration.py
gemini-live-plivo/: README.md
gemini3.1flash-live-native/: .env.example  README.md  pyproject.toml  utils.py
gemini3.1flash-live-native/inbound/: agent.py  server.py  system_prompt.md
gemini3.1flash-live-native/outbound/: agent.py  server.py  system_prompt.md
gemini3.1flash-live-native/tests/: conftest.py  helpers.py  test_e2e_live.py  test_integration.py  test_live_call.py  test_multiturn_voice.py  test_outbound_call.py
gpt-realtime-native/: README.md
gpt4.1-deepgram-elevenlabs-vapi/: .env.example  README.md  pyproject.toml  setup_sip.py  utils.py
gpt4.1-deepgram-elevenlabs-vapi/inbound/: agent.py  server.py  system_prompt.md
gpt4.1-deepgram-elevenlabs-vapi/outbound/: agent.py  server.py  system_prompt.md
gpt4.1-deepgram-elevenlabs-vapi/tests/: helpers.py  test_e2e_live.py  test_integration.py  test_live_call.py  test_multiturn_voice.py  test_outbound_call.py
gpt4.1mini-gpt4.1-deepgram-elevenlabs-native/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  test_conversation.py  utils.py
gpt4.1mini-gpt4.1-deepgram-elevenlabs-native/inbound/: agent.py  server.py  system_prompt.md
gpt4.1mini-gpt4.1-deepgram-elevenlabs-native/outbound/: agent.py  server.py  system_prompt.md
gpt4.1mini-gpt4.1-deepgram-elevenlabs-native/tests/: helpers.py  test_dual_llm.py  test_e2e_live.py  test_integration.py  test_live_call.py  test_multiturn_voice.py  test_observability.py  test_outbound_call.py
gpt4.1mini-sarvam-elevenlabs-native/: README.md  pyproject.toml  utils.py
gpt4.1mini-sarvam-elevenlabs-native/inbound/: agent.py  server.py
gpt4.1mini-sarvam-elevenlabs-native/outbound/: agent.py  server.py
gpt4.1mini-sarvam-elevenlabs-native/tests/: test_integration.py
gpt4o-deepgram-openaitts-pipecat/inbound/: agent.py
gpt4o-deepgram-openaitts-pipecat/outbound/: agent.py
gpt5.4mini-deepgram-groktts-native/: .env.example  .gitignore  pyproject.toml  utils.py
gpt5.4mini-deepgram-groktts-native/inbound/: agent.py  server.py  system_prompt.md
gpt5.4mini-deepgram-groktts-native/outbound/: agent.py  server.py  system_prompt.md
gpt5.4mini-deepgram-groktts-native/tests/: helpers.py  test_integration.py  test_outbound_call.py
grok-tts-voice-showcase/: .gitignore  bot.py  dashboard.py  metrics_observer.py  pyproject.toml  server.py
grok-tts-voice-showcase/static/: replay.html
grok-voice-native/: .env.example  README.md  agent.py  env.example  pyproject.toml  server.py  system_prompt.md  utils.py
grok-voice-native/inbound/: agent.py  server.py
grok-voice-native/outbound/: agent.py  server.py  system_prompt.md
grok-voice-native/tests/: __init__.py  helpers.py  test_e2e_live.py  test_integration.py  test_live_call.py  test_multiturn_voice.py  test_outbound_call.py
pipecat-plivo/: .env.example  .gitignore  README.md  requirements.txt  voice_agent.py
scripts/: validate-example.sh
