[project]
name = "gpt4-1mini-gpt4-1-deepgram-elevenlabs-native"
version = "0.1.0"
description = "Dual-LLM lead qualification voice agent: GPT-4.1 mini (conversation) + GPT-4.1 (reasoning) + Deepgram nova-3 STT + ElevenLabs TTS + smart-turn-v3 + Plivo telephony"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "plivo>=4.59.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "loguru>=0.7.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "phonenumbers>=8.13.0",
    "silero-vad>=5.1",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "onnxruntime>=1.17.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-httpx>=0.44b0",
    "traceloop-sdk>=0.30.0",
]
streaming = [
    "redis[hiredis]>=5.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "websockets>=12.0",
    "faster-whisper>=1.2.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
