[project]
name = "xai-voice-showcase"
version = "0.1.0"
description = "xAI Grok TTS voice showcase — 5 voices, multilingual auto-detect, expressive speech tags over Pipecat + Plivo telephony"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[google,deepgram,silero,local-smart-turn-v3,runner]",
    "httpx",
    "pydub",
    "python-dotenv",
    "loguru",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
